I have no clue what I am doing

--- a/Toolkit TPOT v0.1/Loggingserver/logstash.conf
+++ b/Toolkit TPOT v0.1/Loggingserver/logstash.conf
@@ -1,6 +1,7 @@
 # Sample Logstash configuration for creating a simple
 # Beats -> Logstash -> Elasticsearch pipeline.
 
+# Input section
 input {
   beats {
     port => 5044
@@ -12,11 +13,27 @@ input {
   }
 }
 
+# Filter Section
 filter {
-# Syslog
-  if [fields][type] == "Syslog" {
-    grok {
-      match => [ "message", "%{MONTH:Month}\s\s%{INT:Day}\s%{TIME:Time}\s%{WORD:System}\s%{WORD:Username}\[%{INT:PID}].%{IPV4:src_ip}\s%{INT:src_port}\s%{IPV4:dst_ip}\s%{INT:dst_port}\sINFO\sCommand\sexecuted:\s(?<Command>.*)"]
+
+
+# Fatt
+  if [fields][type] == "Fatt" {
+    date {
+      match => [ "timestamp", "ISO8601" ]
+    }
+    mutate {
+      rename => {
+        "sourceIp" => "src_ip"
+	"destinationIp" => "dest_ip"
+	"sourcePort" => "src_port"
+	"destinationPort" => "dest_port"
+        "gquic" => "fatt_gquic"
+        "http" => "fatt_http"
+        "rdp" => "fatt_rdp"
+        "ssh" => "fatt_ssh"
+        "tls" => "fatt_tls"
+      }
     }
   }
 
@@ -30,6 +47,7 @@ filter {
       field => "[alert][signature_id]"
       destination => "[alert][cve_id]"
       dictionary_path => "/etc/listbot/cve.yaml"
+#      fallback => "-"
     }
   }
 
@@ -49,6 +67,14 @@ filter {
     }
   }
 
+# Adbhoney
+  if [fields][type] == "Adbhoney" {
+    date {
+      match => [ "timestamp", "ISO8601" ]
+      remove_field => ["unixtime"]
+    }
+  }
+
 # Ciscoasa
   if [fields][type] == "Ciscoasa" {
     kv {
@@ -60,19 +86,49 @@ filter {
     date {
       match => [ "timestamp", "ISO8601" ]
     }
+    mutate {
+      add_field => {
+        "dest_ip" => "${MY_EXTIP}"
+      }
+    }
   }
 
+# CitrixHoneypot
+  if [fields][type] == "CitrixHoneypot" {
+    grok { 
+      match => { 
+        "message" => [ "\A\(%{IPV4:src_ip:string}:%{INT:src_port:integer}\): %{JAVAMETHOD:http.http_method:string}%{SPACE}%{CISCO_REASON:fileinfo.state:string}: %{UNIXPATH:fileinfo.filename:string}", 
+	               "\A\(%{IPV4:src_ip:string}:%{INT:src_port:integer}\): %{JAVAMETHOD:http.http_method:string}%{SPACE}%{CISCO_REASON:fileinfo.state:string}: %{GREEDYDATA:payload:string}", 
+		       "\A\(%{IPV4:src_ip:string}:%{INT:src_port:integer}\): %{S3_REQUEST_LINE:msg:string} %{CISCO_REASON:fileinfo.state:string}: %{GREEDYDATA:payload:string:string}",
+		       "\A\(%{IPV4:src_ip:string}:%{INT:src_port:integer}\): %{GREEDYDATA:msg:string}" ] 
+      } 
+    }
+    date {
+      match => [ "asctime", "ISO8601" ]
+      remove_field => ["asctime"]
+      remove_field => ["message"]
+    }
+    mutate {
+      add_field => {
+        "dest_port" => "443"
+      }
+      rename => {
+        "levelname" => "level"
+      }
+    }
+  }
+  
 # Conpot
   if [fields][type] == "ConPot" {
     date {
       match => [ "timestamp", "ISO8601" ]
     }
-    mutate {
-      rename => {
-        "dst_port" => "dest_port"
-        "dst_ip" => "dest_ip"
-      }
-    }
+    mutate { 
+      rename => { 
+        "dst_port" => "dest_port" 
+        "dst_ip" => "dest_ip" 
+      } 
+    } 
   }
 
 # Cowrie
@@ -114,21 +170,44 @@ filter {
     }
   }
 
+# Dicompot
+  if [fields][type] == "Dicompot" {
+    date {
+      match => [ "time", "yyyy-MM-dd HH:mm:ss" ]
+      remove_field => ["time"]
+      remove_field => ["timestamp"]
+    }
+    mutate {
+      rename => {
+        "ID" => "id"
+        "IP" => "src_ip"
+        "Port" => "src_port"
+        "AETitle" => "aetitle"
+        "Command" => "input"
+        "Files" => "files"
+        "Identifier" => "identifier"
+        "Matches" => "matches"
+        "Status" => "session"
+        "Version" => "version"
+      }
+    }
+  }
+
 # ElasticPot
   if [fields][type] == "ElasticPot" {
     date {
       match => [ "timestamp", "ISO8601" ]
     }
-  }
-
-# Glastopf
-  if [fields][type] == "Glastopf" {
-    grok {
-      match => [ "message", "\A%{TIMESTAMP_ISO8601:timestamp}%{SPACE}%{NOTSPACE}%{SPACE}%{IP:src_ip}%{SPACE}%{WORD}%{SPACE}%{URIPROTO:http_method}%{SPACE}%{NOTSPACE:http_uri}%{SPACE}%{NOTSPACE}%{SPACE}%{HOSTNAME}:%{NUMBER:dest_port:integer}" ]
-    }
-    date {
-      match => [ "timestamp", "yyyy-MM-dd HH:mm:ss,SSS" ]
-      remove_field => ["timestamp"]
+    mutate {
+      rename => {
+        "content_type" => "http.http_content_type"
+        "dst_port" => "dest_port"
+        "dst_ip" => "dest_ip"
+        "message" => "event_type"
+        "request" => "request_method"
+        "user_agent" => "http_user_agent"
+	"url" => "http.url"
+      }
     }
   }
 
@@ -151,6 +230,42 @@ filter {
     }
   }
 
+# Honeypy
+  if [fields][type] == "Honeypy" {
+    date {
+      match => [ "timestamp", "ISO8601" ]
+      remove_field => ["timestamp"]
+      remove_field => ["date"]
+      remove_field => ["time"]
+      remove_field => ["millisecond"]
+    }
+  }
+
+# Honeysap
+  if [fields][type] == "Honeysap" {
+    date {
+      match => [ "timestamp", "yyyy-MM-dd HH:mm:ss.SSSSSS" ]
+      remove_field => ["timestamp"]
+    }
+    mutate {
+      rename => {
+        "[data][error_msg]" => "event_type"
+        "service" => "sensor"
+        "source_port" => "src_port"
+        "source_ip" => "src_ip"
+        "target_port" => "dest_port"
+        "target_ip" => "dest_ip"
+      }
+      remove_field => "event"
+      remove_field => "return_code"
+    }
+    if [data] {
+      mutate {
+	remove_field => "[data]"
+      }
+    }    
+  }
+
 # Honeytrap
   if [fields][type] == "Honeytrap" {
     date {
@@ -166,19 +281,34 @@ filter {
     }
   }
 
+# Ipphoney
+  if [fields][type] == "Ipphoney" {
+    date {
+      match => [ "timestamp", "ISO8601" ]
+    }
+    mutate {
+      rename => {
+	"query" => "ipp_query"
+        "content_type" => "http.http_content_type"
+        "dst_port" => "dest_port"
+        "dst_ip" => "dest_ip"
+        "request" => "request_method"
+        "operation" => "data"
+        "user_agent" => "http_user_agent"
+        "url" => "http.url"
+      }
+    }
+  }
+
 # Mailoney
   if [fields][type] == "Mailoney" {
-    grok {
-      match => [ "message", "\A%{NAGIOSTIME}\[%{IPV4:src_ip}:%{INT:src_port:integer}] %{GREEDYDATA:smtp_input}" ]
+    date {
+      match => [ "timestamp", "ISO8601" ]
     }
     mutate {
       add_field => {
         "dest_port" => "25"
       }
-    }
-    date {
-      match => [ "nagios_epoch", "UNIX" ]
-      remove_field => ["nagios_epoch"]
     }
   }
 
@@ -187,6 +317,7 @@ filter {
     mutate {
       add_field => {
         "dest_port" => "2575"
+        "dest_ip" => "${MY_EXTIP}"
       }
     }
     date {
@@ -239,12 +370,12 @@ if "_grokparsefailure" in [tags] { drop {} }
     geoip {
       cache_size => 10000
       source => "src_ip"
-      database => "/opt/logstash/vendor/bundle/jruby/2.3.0/gems/logstash-filter-geoip-5.0.3-java/vendor/GeoLite2-City.mmdb"
+      database => "/usr/share/logstash/vendor/bundle/jruby/2.5.0/gems/logstash-filter-geoip-7.1.3-java/vendor/GeoLite2-City.mmdb"
     }
     geoip {
       cache_size => 10000
       source => "src_ip"
-      database => "/opt/logstash/vendor/bundle/jruby/2.3.0/gems/logstash-filter-geoip-5.0.3-java/vendor/GeoLite2-ASN.mmdb"
+      database => "/usr/share/logstash/vendor/bundle/jruby/2.5.0/gems/logstash-filter-geoip-7.1.3-java/vendor/GeoLite2-ASN.mmdb"
     }
     translate {
       refresh_interval => 86400
@@ -270,12 +401,33 @@ if "_grokparsefailure" in [tags] { drop {} }
         convert => { "status" => "integer" }
     }
   }
+  if [id] {
+    mutate {
+        convert => { "id" => "string" }
+    }
+  }
+
+# Add T-Pot hostname and external IP
+#  if [fields][type] == "Adbhoney" or [type] == "Ciscoasa" or [type] == "CitrixHoneypot" or [type] == "ConPot" or [type] == "Cowrie" or [type] == "Dicompot" or [type] == "Dionaea" or [type] == "ElasticPot" or [type] == "Fatt" or [type] == "Glutton" or [type] == "Honeysap" or [type] == "Honeytrap" or [type] == "Heralding" or [type] == "Honeypy" or [type] == "Ipphoney" or [type] == "Mailoney" or [type] == "Medpot" or [type] == "P0f" or [type] == "Rdpy" or [type] == "Suricata" or [type] == "Tanner" {
+    mutate {
+      add_field => {
+        "t-pot_ip_ext" => "${MY_EXTIP}"
+        "t-pot_ip_int" => "${MY_INTIP}"
+        "t-pot_hostname" => "${MY_HOSTNAME}"
+      }
+    }
+#  }
+
 }
 
+# Output section
 output {
   elasticsearch {
     hosts => ["https://0.0.0.0:9200"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
+    # With templates now being legacy and ILM in place we need to set the daily index with its template manually. Otherwise a new index might be created with differents settings configured through Kibana.
+    index => "logstash-%{+YYYY.MM.dd}"
+    template => "/etc/logstash/tpot_es_template.json"
+#    document_type => "doc"
     user => logstash
     password => logstash
     ssl => true
@@ -283,10 +435,21 @@ output {
     cacert=> "/etc/logstash/rootCA.crt"
   }
 
-  if [fields][type] == "Suricata" {
-    file {
-      file_mode => 0760
-      path => "/data/suricata/log/suricata_ews.log"
-    }
-  }
+  #if [fields][type] == "Suricata" {
+  #    file {
+  #      file_mode => 0770
+  #      path => "/data/suricata/log/suricata_ews.log"
+  #    }
+  #}
+  # Debug output
+  #if [fields][type] == "CitrixHoneypot" {
+  #  stdout {
+  #    codec => rubydebug
+  #  }
+  #}
+  # Debug output
+  #stdout {
+  #  codec => rubydebug
+  #}
+
 }
