--- a/Toolkit TPOT v0.1/Honeypotservers/filebeat.yml
+++ b/Toolkit TPOT v0.1/Honeypotservers/filebeat.yml
@@ -2,12 +2,14 @@ filebeat.inputs:
 - type: log
   enabled: true
   paths:
-    - /var/log/syslog
+    - /data/fatt/log/fatt.log
   fields:
-    type: Syslog
+    type: Fatt
     t-pot_ip_ext: ${MY_EXTIP}
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
+  json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
@@ -18,6 +20,7 @@ filebeat.inputs:
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
@@ -28,6 +31,18 @@ filebeat.inputs:
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
+- type: log
+  enabled: true
+  paths:
+    - /data/adbhoney/log/adbhoney.json
+  fields:
+    type: Adbhoney
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+  json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
@@ -37,43 +52,18 @@ filebeat.inputs:
     t-pot_ip_ext: ${MY_EXTIP}
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
-    dest_ip: ${MY_EXTIP}
+
 - type: log
   enabled: true
   paths:
-    - /data/glastopf/log/glastopf.log
+    - /data/citrixhoneypot/logs/server.log
   fields:
-    type: Glastopf
+    type: CitrixHoneypot
     t-pot_ip_ext: ${MY_EXTIP}
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
-- type: log
-  enabled: true
-  paths:
-    - /data/heralding/log/auth.csv
-  fields:
-    type: Heralding
-    t-pot_ip_ext: ${MY_EXTIP}
-    t-pot_ip_int: ${MY_INTIP}
-    t-pot_hostname: ${MY_HOSTNAME}
-- type: log
-  enabled: true
-  paths:
-    - /data/mailoney/log/commands.log
-  fields:
-    type: Mailoney
-    t-pot_ip_ext: ${MY_EXTIP}
-    t-pot_ip_int: ${MY_INTIP}
-    t-pot_hostname: ${MY_HOSTNAME}
-- type: log
-  enabled: true
-  paths:
-    - /data/rdpy/log/rdpy.log
-  fields:
-    type: Rdpy
-    t-pot_ip_ext: ${MY_EXTIP}
-    t-pot_ip_int: ${MY_INTIP}
-    t-pot_hostname: ${MY_HOSTNAME}
+  json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
@@ -84,6 +74,7 @@ filebeat.inputs:
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
@@ -94,6 +85,7 @@ filebeat.inputs:
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
@@ -104,16 +96,49 @@ filebeat.inputs:
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
-    - /data/elasticpot/log/elasticpot.log
+    - /data/dicompot/log/dicompot.log
+  fields:
+    type: Dicompot
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+  json.keys_under_root: true
+
+- type: log
+  enabled: true
+  paths:
+    - /data/ddospot/log/*.log
+  fields:
+    type: DdosPot
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+
+- type: log
+  enabled: true
+  paths:
+    - /data/elasticpot/log/elasticpot.json
   fields:
     type: ElasticPot
     t-pot_ip_ext: ${MY_EXTIP}
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
+- type: log
+  enabled: true
+  paths:
+    - /data/endlessh/log/endlessh.log
+  fields:
+    type: Endlessh
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+
 - type: log
   enabled: true
   paths:
@@ -123,7 +148,50 @@ filebeat.inputs:
     t-pot_ip_ext: ${MY_EXTIP}
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
+
+- type: log
+  enabled: true
+  paths:
+    - /data/hellpot/log/hellpot.log
+  fields:
+    type: HellPot
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
+- type: log
+  enabled: true
+  paths:
+    - /data/heralding/log/auth.csv
+  fields:
+    type: Heralding
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+
+- type: log
+  enabled: true
+  paths:
+    - /data/honeypy/log/json.log
+  fields:
+    type: Honeypy
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+  json.keys_under_root: true
+
+- type: log
+  enabled: true
+  paths:
+    - /data/honeysap/log/honeysap-external.log
+  fields:
+    type: Honeysap
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+  json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
@@ -134,6 +202,28 @@ filebeat.inputs:
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
+- type: log
+  enabled: true
+  paths:
+    - /data/ipphoney/log/ipphoney.json
+  fields:
+    type: Ipphoney
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+  json.keys_under_root: true
+
+- type: log
+  enabled: true
+  paths:
+    - /data/mailoney/log/commands.log
+  fields:
+    type: Mailoney
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+
 - type: log
   enabled: true
   paths:
@@ -143,15 +233,40 @@ filebeat.inputs:
     t-pot_ip_ext: ${MY_EXTIP}
     t-pot_ip_int: ${MY_INTIP}
     t-pot_hostname: ${MY_HOSTNAME}
-    dest_ip: ${MY_EXTIP}
   json.keys_under_root: true
+
+- type: log
+  enabled: true
+  paths:
+    - /data/rdpy/log/rdpy.log
+  fields:
+    type: Rdpy
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+
+- type: log
+  enabled: true
+  paths:
+    - /data/redishoneypot/log/redishoneypot.log
+  fields:
+    type: RedisHoneypot
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
+  json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
     - /data/nginx/log/access.log
   fields:
     type: NGINX
+    t-pot_ip_ext: ${MY_EXTIP}
+    t-pot_ip_int: ${MY_INTIP}
+    t-pot_hostname: ${MY_HOSTNAME}
   json.keys_under_root: true
+
 - type: log
   enabled: true
   paths:
